* Tue Jul 01 2014 Ding-Yi Chen <dchen at redhat.com> - 2.0.0
[TODO] Check ibus-chewing compatiblity
- Fixed Bug 1093336 - date(1): -u is much portable than --utc
- Fix EPEL 7 support.
- Enhancement:
  + No need to use MAKE_INSTALL_* for rpm files section.
    INSTALL at any place works.
  + Better handling of ChangeLog:
    - ChangeLog will only invoked before make pack_src or make changelog.
  + find_lang and files -f .lang are added automatically when
    translations exists.
  + New modules:
    - CmakeFedoraScript: Scripts to be invoked in command line.
    - ManageChangeLogScript: Scripts for handling ChangeLog.
    - ManageRpmScript: RPM Scripts for handling RPM and SPEC.
  + New cache variables:
    - CMAKE_FEDORA_MODULE_DIR: cmake-fedora modules dir.
  + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
  + ManageFile: New function: MANAGE_FILE_CACHE
  + ManageFile: New function: MANAGE_FILE_EXPIRY
  + ManageGConf: New macro: MANAGE_GCONF_SCHEMAS
  + ManageMessage: New function: M_OUT
  + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
  + ManageString: New function: STRING_ESCAPE_BACKSLASH
  + ManageString: New function: STRING_ESCAPE_DOLLAR
  + ManageString: New function: STRING_ESCAPE_QUOTE
  + ManageTranslate: New function: ADD_POT_FILE 
  + Target rpmlint: rpmlint statistics are now combined.
  + cmake-fedora-fedpkg: Default is now build all active 
    Fedora (including rawhide) and EPEL releases in fedpkg branches.
- Removed:
  + cmake-fedora.conf.in is no longer needed.
  + TODO should be put in wiki.  
  + Modules:
    - ManageInstall: This is no longer needed.
  + Targets:
    - changelog_prev_update: 
  + Scripts:
    - cmake-fedora-functions is no longer needed.
    - cmake-fedora-changelog is no longer needed.
  + Variables:
    - PRJ_RPM_SPEC_FILE
- Changed:
  + DateTimeFormat: Macro to function: TODAY
  + ManageAPIDOC: MANAGE_APIDOC_DOXYGEN: Macro to function.
  + ManageAPIDOC: MANAGE_APIDOC_DOXYGEN: Parameters changed.